fix header z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -35,12 +35,14 @@ body {
 header {
     display: flex;
     position: fixed;
+    z-index: 10;
     top: 0;
     left: 0;
     overflow: hidden;
     background-color: white;
     width: 100%;
     height: 50px;
+    box-shadow: 0 2px 4px 0 rgba(88, 88, 88, 0.2), 0 3px 10px 0 rgba(88, 88, 88, 0.19);
 }
 
 header #logo {
